--- a/style.css
+++ b/style.css
@@ -260,6 +260,28 @@ textarea{
   content: "Information about the destination's safety, social norms, and public transportation";
 }
 
+.helpButton{
+  position: fixed;
+  right: 10px;
+  bottom: 10px;
+  border-radius: 50%;
+  background-color: #61b3e4;
+  color: white;
+  width: 8vh;
+  height: 8vh;
+  font-size: 4.2vh;
+  font-family: SFProRoundedRegular, Montserrat, sans-serif;
+  text-align: center;
+}
+
+.helpButton:hover{
+  width: 10vh;
+  height: 10vh;
+  font-size: 6vh;
+  background-color: #ffffff;
+  color: #61b3e4;
+}
+
 .ripple {
    width: 5px;
    height: 5px;
